<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Tip It</string>
    <string name="bill">Bill</string>
    <string name="tip">Tip:</string>
    <string name="total">Total:</string>
    
    <string name="percent10">10%</string>
    <string name="percent15">15%</string>
    <string name="percent20">20%</string>
    
    <string name="digit0">0</string>
    <string name="digit1">1</string>
    <string name="digit2">2</string>
    <string name="digit3">3</string>
    <string name="digit4">4</string>
    <string name="digit5">5</string>
    <string name="digit6">6</string>
    <string name="digit7">7</string>
    <string name="digit8">8</string>
    <string name="digit9">9</string>
    <string name="digitDecimal">.</string>
    <string name="digitDelete">Del</string>

</resources>