<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp" >

    <TextView
        android:id="@+id/billLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/bill" />
    
    <EditText 
        android:id="@+id/bill"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="" 
        android:layout_marginBottom="15dp"
        android:editable="false" />

    <RadioGroup
        android:id="@+id/percentageRadioGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">

        <RadioButton
            android:id="@+id/percent10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/percent10" />

        <RadioButton
            android:id="@+id/percent15"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/percent15" />

        <RadioButton
            android:id="@+id/percent20"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/percent20"/>

    </RadioGroup>

    <TableLayout
        android:id="@+id/digitsTable"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="50dp" >

        <TableRow
            android:id="@+id/tableRow1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" 
            android:gravity="center">
            
            <Button
	            android:id="@+id/button1"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:text="@string/digit1"
	            android:layout_weight="1" />

	        <Button
	            android:id="@+id/button2"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:text="@string/digit2"
	            android:layout_weight="1" />
	        
	        <Button
	            android:id="@+id/button3"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:text="@string/digit3"
	            android:layout_weight="1" />
        </TableRow>

        <TableRow
            android:id="@+id/tableRow2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" 
            android:gravity="center">
            
            <Button
	            android:id="@+id/button4"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:text="@string/digit4"
	            android:layout_weight="1" />

	        <Button
	            android:id="@+id/button5"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:text="@string/digit5"
	            android:layout_weight="1" />
	        
	        <Button
	            android:id="@+id/button6"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:text="@string/digit6"
	            android:layout_weight="1" />
        </TableRow>

        <TableRow
            android:id="@+id/tableRow3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" 
            android:gravity="center">
            
            <Button
	            android:id="@+id/button7"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:text="@string/digit7"
	            android:layout_weight="1" />

	        <Button
	            android:id="@+id/button8"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:text="@string/digit8"
	            android:layout_weight="1" />
	        
	        <Button
	            android:id="@+id/button9"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:text="@string/digit9"
	            android:layout_weight="1" />
        </TableRow>

        <TableRow
            android:id="@+id/tableRow4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" 
            android:gravity="center">
            
            <Button
	            android:id="@+id/buttonDecimal"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:text="@string/digitDecimal"
	            android:layout_weight="1" />

	        <Button
	            android:id="@+id/button0"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:text="@string/digit0"
	            android:layout_weight="1" />
	        
	        <Button
	            android:id="@+id/buttonDelete"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:text="@string/digitDelete"
	            android:layout_weight="1" />
        </TableRow>
    </TableLayout>

    <TableLayout
        android:id="@+id/tipTable"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TableRow
            android:id="@+id/tableRow5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/tipLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tip"
                android:layout_weight="1" />

            <TextView
                android:id="@+id/totalLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/total"
                android:layout_weight="1" />

        </TableRow>

        <TableRow
            android:id="@+id/tableRow6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <EditText
                android:id="@+id/tip"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1" 
                android:editable="false"
                android:focusable="false" />

            <EditText
                android:id="@+id/total"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:editable="false"
                android:focusable="false" />

        </TableRow>

    </TableLayout>

</LinearLayout>